# render-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
assets/DarkCity2/Background/Mat/: Grid3_a.json  Skyscraper_01_a.json
assets/DarkCity2/Background/Models/: Skyscraper_01.gltf  Skyscraper_02.gltf  Skyscraper_03.gltf  Skyscraper_04.gltf  Skyscraper_05.gltf  Skyscraper_distance_1.gltf  Skyscraper_distance_2.gltf  Skyscraper_distance_3.gltf  Skyscraper_distance_4.gltf  Skyscraper_distance_5.gltf  Skyscraper_distance_6.gltf  (+4 more)
assets/DarkCity2/Materials/: Metal_Panel4_a.json  Props1_a.json  Wall_01_a.json  Wall_02_a.json
assets/materials/: pbrStandard.mat.clj  pbrStandard[T].mat.clj
assets/mats/: pbr_black.json  pbr_white.json  skybox.json
assets/template/: Background.xml  backgroud.xml
assets/template/skycity/: BackgroundCity.xml  Skyscraper_01.xml  Skyscraper_02.xml  Skyscraper_03.xml  Skyscraper_04.xml  Skyscraper_05.xml  Skyscraper_distance_1.xml  Skyscraper_distance_2.xml  Skyscraper_distance_3.xml  Skyscraper_distance_4.xml  Skyscraper_distance_5.xml  Skyscraper_distance_6.xml  Skyscraper_distance_7.xml  Skyscraper_distance_8.xml  Wall_Large1.xml  Wall_Large2.xml  Wall_Larges.xml
assets/template/wallbig/: Wall_Big_01_A.xml  Wall_Big_01_B.xml  Wall_Big_01_C.xml  Wall_Big_01_D.xml  Wall_Big_01_E.xml  Wall_Big_01_F.xml  Wall_Big_01_G.xml  Wall_Bigs.xml
assets/texture/sky/: sky.cubemap.json
materials/: pbrColor.mat.clj  pbrStandard.mat.clj
script/: render.clj
src/: asset_cache.rs  camera.rs  camera_ctrl.rs  demo.rs  main.rs  tools.rs
(+8 files in other folders)
