[package]
name = "render-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
seija-app = {path = "../seija/crates/seija-app"}
seija-core = {path = "../seija/crates/seija-core"}
seija-winit = {path = "../seija/crates/seija-winit"}
seija-input = {path = "../seija/crates/seija-input"}
seija-transform = {path = "../seija/crates/seija-transform"}
seija-asset = {path = "../seija/crates/seija-asset"}
seija-render = {path = "../seija/crates/seija-render"}
seija-pbr = {path = "../seija/crates/seija-pbr"}
seija-gltf = {path = "../seija/crates/seija-gltf"}
seija-template = {path = "../seija/crates/seija-template"}
seija-render-template = {path = "../seija/crates/seija-render-template"}
smol = "1.2.5"
anyhow = "1.0.60"
log = "0.4.17"
lazy_static = "*"
thread_local = "1.1"